k8s/permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: bookpoll
spec:
  mtls:
    mode: PERMISSIVE
