k8s/book-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: bookpoll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: bodibo/book-service:latest
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: bookpoll
spec:
  selector:
    app: book-service
  ports:
    - port: 8002
      targetPort: 8002
