k8s/notify-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-service
  namespace: bookpoll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify-service
  template:
    metadata:
      labels:
        app: notify-service
    spec:
      containers:
        - name: notify-service
          image: bodibo/notify-service:latest
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: notify-service
  namespace: bookpoll
spec:
  selector:
    app: notify-service
  ports:
    - port: 8004
      targetPort: 8004
