k8s/vote-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-service
  namespace: bookpoll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-service
  template:
    metadata:
      labels:
        app: vote-service
    spec:
      containers:
        - name: vote-service
          image: bodibo/vote-service:latest
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: bookpoll
spec:
  selector:
    app: vote-service
  ports:
    - port: 8003
      targetPort: 8003
