k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookpoll-ingress
  namespace: bookpoll
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /books(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: book-service
                port:
                  number: 8002
          - path: /votes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote-service
                port:
                  number: 8003
          - path: /notify(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notify-service
                port:
                  number: 8004
