k8s/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-service-vs
  namespace: bookpoll
spec:
  hosts:
    - book-service
  http:
    - route:
        - destination:
            host: book-service
            port:
              number: 8002
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: book-service-dr
  namespace: bookpoll
spec:
  host: book-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
