k8s/vote-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vote-service-vs
  namespace: bookpoll
spec:
  hosts:
  - vote-service
  http:
  - corsPolicy:
      allowOrigins:
      - exact: "http://localhost:5501"
      - exact: "http://127.0.0.1:5501"
      - exact: "http://localhost:5500"
      - exact: "http://127.0.0.1:5500"
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      allowHeaders:
      - content-type
      - origin
      - authorization
      - accept
      - x-requested-with
      allowCredentials: true
      maxAge: "24h"
    route:
    - destination:
        host: vote-service
        port:
          number: 8003
